chore: updating refresh token table and cookie res
