# src/modules/users/infra/http/controllers/SessionController.ts
@@ -7,18 +7,26 @@ import { AuthenticateSessionService } from "@modules/users/services/authenticate
 export class SessionController {
   async authenticate(request: Request, response: Response): Promise<Response> {
     const { email, password } = request.body;
+    const remote_address = request.socket.remoteAddress || "";
 
     const authenticateUser = container.resolve(AuthenticateSessionService);
 
-    const { user, token, refresh_token } = await authenticateUser.execute({
-      email,
-      password,
-    });
+    const { user, token, refresh_token, refresh_expiration } =
+      await authenticateUser.execute({
+        email,
+        password,
+        remote_address,
+      });
 
-    return response.json({
-      user: instanceToInstance(user),
-      token,
-      refresh_token,
-    });
+    return response
+      .cookie("refresh_token", refresh_token, {
+        httpOnly: true,
+        sameSite: "lax",
+        expires: refresh_expiration,
+      })
+      .json({
+        user: instanceToInstance(user),
+        token,
+      });
   }
 }
